--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
-    "protractor": "^2.5.1"
+    "protractor": "^2.5.1",
+    "protractor-http-mock": "^0.1.17"
   },
   "dependencies": {
     "http-server": "^0.8.5"
