--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 script:
   - npm test --single-run
-  - node_modules/.bin/protractor test/e2e/conf.js --browser=firefox
+  - node_modules/.bin/protractor test/e2e/conf.js
 language: node_js
 node_js:
   - "0.10"
@@ -11,6 +11,7 @@ before_script:
   - webdriver-manager update
   - webdriver-manager start > /dev/null &
   - npm start > /dev/null &
+  - http-server
   - sleep 3
 
 
