--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start test/karma.conf.js"
+    "test": "npm run test-karma && npm run test-protractor",
+    "test-karma": "karma start test/karma.conf.js --single-run",
+    "test-protractor": "protractor test/e2e/conf.js"
   },
   "author": "",
   "license": "ISC",
