--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+script:
+  # - npm test
+  # - node_modules/.bin/protractor test/e2e/conf.js
+  - npm run test-karma
+  - npm run test-protractor
 language: node_js
 node_js:
   - "0.10"
@@ -9,6 +14,3 @@ before_script:
   - webdriver-manager start > /dev/null &
   - npm start > /dev/null &
   - http-server
-script:
-  - npm test
-  # - node_modules/.bin/protractor test/e2e/conf.js
