Might have finally cracked Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
   - webdriver-manager update
   - webdriver-manager start > /dev/null &
   - npm start > /dev/null &
-  - http-server
+  - http-server > /dev/null &
