--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run test-karma && npm run test-protractor",
     "test-karma": "karma start test/karma.conf.js --single-run",
-    "test-protractor": "protractor test/e2e/conf.js"
+    "test-protractor": "protractor test/e2e/conf.js --browser=firefox"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.11",
     "karma-chrome-launcher": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
